# forty-bytes

./: CMakeLists.txt  README.md
cmake/: FindPico.cmake
cmd/: CMakeLists.txt  client.cc  echoServer.cc
include/: netTransportQUIC.hh  netTransportUDP.hh  packet.h  transport.hh  transport_manager.hh
lib/: CMakeLists.txt
src/: netTransportQUIC.cc  netTransportUDP.cc  transport_manager.cc
